--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 		</nav>
 
 		<div id="columns">
-			<div id="center" class="inbound" style='padding-top: 1em;'>
+			<div id="center" class="inbound" style='margin-top: 3em;'>
 				{% block content %}
 				{% endblock %}
 			</div><!--end center-->
