--- a/templates/me.html
+++ b/templates/me.html
@@ -12,7 +12,7 @@
 <p>
 We have deployed a dedicated compute node just for your training session to
 use. No one outside of your training has access to this machine. Completely
-transparently to you, all of the jobs that you run in Galaxy, during thec
+transparently to you, all of the jobs that you run in Galaxy, during the
 period of the training event, will "prefer" to run on this machine. If there is
 no room on that machine, they will run on any other machine in our cluster with
 resources.
