Implement new status page

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,10 @@
 	<meta name="viewport" content="maximum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<title>Galaxy TIaaS</title>
-	<link href="{{ config.galaxy.api.url }}/static/style/base.css?v=1535407305" media="screen" rel="stylesheet" type="text/css" />
+	<link href="{{ config.redirect_location }}/static/style/base.css?v=1535407305" media="screen" rel="stylesheet" type="text/css" />
 
 	<style type="text/css" media="all">
-		#masthead {
-			padding: 0;
-			margin-bottom: 0px;
-			background-color: #2c3143;
-			height: 2.5rem;
-		}
+        #center{ padding-right: 10em; padding-left: 10em; }
 	</style>
 </head>
 
