--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	<link href="{{ config.redirect_location }}/static/style/base.css?v=1535407305" media="screen" rel="stylesheet" type="text/css" />
 
 	<style type="text/css" media="all">
-        #center{ padding-right: 10em; padding-left: 10em; }
+		#center{ padding-right: 10em; padding-left: 10em; overflow-y: auto; }
 	</style>
 </head>
 
