--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 		</nav>
 
 		<div id="columns">
-			<div id="center" class="inbound" style='margin-top: 3em;'>
+			<div id="center" class="inbound" style="padding-top: 3em;">
 				{% block content %}
 				{% endblock %}
 			</div><!--end center-->
