--- a/templates/status.html
+++ b/templates/status.html
@@ -1,7 +1,51 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2>Overview</h2>
+<div style="display: flex; flex-direction: row">
+	<div>
+		<h3>State Overview</h3>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>State</th>
+					<th>Count</th>
+				</tr>
+			</thead>
+			{% for state, count  in state_summary.items() %}
+				<tr>
+					<td>{{ state }}</td>
+					<td>{{ count }}</td>
+				</tr>
+			{% endfor %}
+		</table>
+	</div>
+	<div>
+		<h3>Overview by Tool</h3>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Tool</th>
+					<th>New</th>
+					<th>Queued</th>
+					<th>Ok</th>
+					<th>Error</th>
+				</tr>
+			</thead>
+			{% for tool, states in job_summary.items() %}
+				<tr>
+					<td>{{ tool }}</td>
+					<td>{{ states.new }}</td>
+					<td>{{ states.queued }}</td>
+					<td>{{ states.ok }}</td>
+					<td>{{ states.error }}</td>
+				</tr>
+			{% endfor %}
+		</table>
+	</div>
+</div>
 
+<h2>Queue</h2>
 <table class="table">
     <thead>
         <tr>
