--- a/templates/status.html
+++ b/templates/status.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <h2>Overview</h2>
-<div style="display: flex; flex-direction: row">
-	<div>
+<div class="row">
+	<div class="col-md-3 col-sm-12">
 		<h3>State Overview</h3>
 		<table class="table">
 			<thead>
@@ -20,7 +20,7 @@
 			{% endfor %}
 		</table>
 	</div>
-	<div>
+	<div class="col-md-9 col-sm-12">
 		<h3>Overview by Tool</h3>
 		<table class="table">
 			<thead>
