--- a/templates/status.html
+++ b/templates/status.html
@@ -58,7 +58,7 @@
 	</thead>
 	{% for row in jobs %}
 		<tr>
-			<td class="dataset" style="background: {{ row.user_id[0:6] }}">{{ row.user_id[0:6] }}</td>
+			<td class="dataset" style="background: #{{ row.user_id[0:6] }}">{{ row.user_id[0:6] }}</td>
 			<td class="dataset state-{{row.state}}">{{ row.create_time }}</td>
 			<td class="dataset state-{{row.state}}">{{ row.tool_id }}</td>
 			<td class="dataset state-{{row.state}}">{{ row.state }}</td>
