move about text

--- a/templates/status.html
+++ b/templates/status.html
@@ -4,6 +4,15 @@
 <h2>Overview</h2>
 <div class="row">
 	<div class="col-md-3 col-sm-12">
+		<h3>About</h3>
+		<p>
+		This page gives you a brief overview of the current status of the trainees. Please note the following:
+		</p>
+		<ul>
+			<li>Only jobs created in the last 3 hours are shown</li>
+			<li>This includes jobs they run outside of the context of the course (as we cannot tell which are which.)</li>
+			<li>The username is essentially random but will be consistent within a one day period</li>
+		</ul>
 		<h3>State Overview</h3>
 		<table class="table">
 			<thead>
@@ -66,14 +75,5 @@
 		</tr>
 	{% endfor %}
 </table>
-
-<p>
-This page gives you a brief overview of the current status of the trainees. Please note the following:
-</p>
-<ul>
-	<li>Only jobs created in the last 3 hours are shown</li>
-	<li>This includes jobs they run outside of the context of the course (as we cannot tell which are which.)</li>
-	<li>The username is essentially random but will be consistent within a one day period</li>
-</ul>
 
 {% endblock %}
