--- a/templates/status.html
+++ b/templates/status.html
@@ -37,6 +37,7 @@
 					<th>Tool</th>
 					<th>New</th>
 					<th>Queued</th>
+					<th>Running</th>
 					<th>Ok</th>
 					<th>Error</th>
 				</tr>
@@ -46,6 +47,7 @@
 					<td>{{ tool }}</td>
 					<td>{{ states.new }}</td>
 					<td>{{ states.queued }}</td>
+					<td>{{ states.running }}</td>
 					<td>{{ states.ok }}</td>
 					<td>{{ states.error }}</td>
 				</tr>
