swap to subdomain-working method

--- a/templates/me.html
+++ b/templates/me.html
@@ -5,7 +5,7 @@
 {% if welcome_to %}
 <div class="donemessage">
 	Congratulations: you are successfully registered in <b>{{ welcome_to }}</b><br/>
-	<a href="{{ config.redirect_location }}">Return to Galaxy</a>
+	<a href="https://{{ host }}">Return to Galaxy</a>
 </div>
 
 <h2>How It Works</h2>
