--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,11 @@
 	<style type="text/css" media="all">
 		#center{ padding-right: 10em; padding-left: 10em; overflow-y: auto; }
 	</style>
+	{{ moment.include_jquery()  }}
+	{{ moment.include_moment()  }}
+	{% if refresh %}
+	<meta http-equiv="refresh" content="5">
+	{% endif %}
 </head>
 
 <body scroll="no" class="full-content ">
