enable for everyone

--- a/templates/status.html
+++ b/templates/status.html
@@ -13,6 +13,14 @@
 			<li>This includes jobs they run outside of the context of the course (as we cannot tell which are which.)</li>
 			<li>The username is essentially random but will be consistent within a one day period</li>
 		</ul>
+		Refresh:
+		<a href="?refresh">Auto</a> |
+		<a href="?">Off</a>
+		</br>
+		Last:
+		<a href="?hours=1">1 hour</a> |
+		<a href="?hours=3">3 hours</a> |
+		<a href="?hours=6">6 hours</a>
 		<h3>State Overview</h3>
 		<table class="table">
 			<thead>
