work around 19.09 css

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 
 <body scroll="no" class="full-content ">
-	<div id="everything">
+	<div id="everything" style="overflow-y: scroll!important">
 		<nav id="masthead" class="navbar navbar-expand justify-content-center navbar-dark">
 			<a class="navbar-brand" href="/">
 				<span class="navbar-brand-title">Galaxy Training Infrastructure as a Service</span>
@@ -26,7 +26,7 @@
 		</nav>
 
 		<div id="columns">
-			<div id="center" class="inbound" style="padding-top: 3em;">
+			<div id="center" class="inbound" style="padding-top: 3em; overflow-y: scroll!important">
 				{% block content %}
 				{% endblock %}
 			</div><!--end center-->
